changed charvi to 4vi

--- a/pets.html
+++ b/pets.html
@@ -99,7 +99,7 @@
     <h4>Book a slot</h4>
     <p>charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi</p>
     <h4>Book a slot</h4>
-    <p>charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi</p>
+    <p>charvi charvi charvi charvi charvi charvi charvi charvi 4vi charvi charvi charvi</p>
 </section>
 
  <footer id="footer">
