--- a/account.html
+++ b/account.html
@@ -12,36 +12,44 @@
     <script src="https://kit.fontawesome.com/d5b015bfd1.js" crossorigin="anonymous"></script>
 </head>
 <body class="acc-bg">
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="modal fade" id="myModal">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1>Title</h1>
+              </div>
+              <div class="modal-body">
+                <p>This is body.</p>
+              </div>
+              <div class="modal-footer">
+                <input class="btn btn-secondary" data-dismiss="modal" value="Close">
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="#" data-toggle="modal" data-target="#myModal">Open Modal</a>
       </div>
     </div>
   </div>
-</div>
+
  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
  <script src="pets.js"></script>
  
  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    setTimeout(function() {
+      $("#myModal").modal('show');
+    setTimeout(function() {
+      $("#myModal").modal('hide');
+       }, 3000);
+    }, 2000);
+  });
+</script>
 </body>
 </html>
