--- a/account.html
+++ b/account.html
@@ -22,7 +22,26 @@
                 <h1>Title</h1>
               </div>
               <div class="modal-body">
-                <p>This is body.</p>
+                <form id="theForm" action="shop.html" method="post" onsubmit="return validateTextbox();">
+                  <div class="row">
+                   <label for="name">Name:</label>
+                    <input type="text" id="name" name=""></br></br>
+                  </div>
+                  <div class="row">
+                   <label for="address">Address:</label>
+                    <input type="text" id="address" name=""></br></br>
+                  </div>
+                  <div class="row">
+                   <label for="phone">Phone:</label>
+                    <input type="tel" id="phone" name=""></br></br>
+                  </div>
+                  <div class="row">
+                   <label for="email">Email:</label>
+                    <input type="email" id="email" name="">
+                  </div>
+                  <input type="Submit" value="Submit">
+                  </form>
+                    
               </div>
               <div class="modal-footer">
                 <input class="btn btn-secondary" data-dismiss="modal" value="Close">
