--- a/pets.html
+++ b/pets.html
@@ -36,6 +36,12 @@
 		</nav>
 </section>
 
+<section class="abstract">
+    <h2>charvi charvi charvi charvi charvi</h2>
+    <p>Pets truly are great companions. They help manage loneliness and depression as well as increasing fitness. Owning a pet doesnt have to be a burden when you wish to have vacations. Thanks to the awesome pet care companies that manage
+    the welfare of pets while owners are away. PET-CRECHE is a pet daycare and boarding franchise headquartered in India, Delhi. Our firm ensures that the pets will be cared for to the high standards the client expects. PET-CRECHE believs in safe socialization, exercise and education for your furry child.</p>
+</section>
+
 
 
 <section class="bitch">
