--- a/pets.html
+++ b/pets.html
@@ -99,13 +99,13 @@
 </section>
 
 <section class="sitters">
-    <h3>Look for quality pet sitters?</h3>
-    <h4>Book a slot</h4>
-    <p>charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi</p>
-    <h4>Book a slot</h4>
-    <p>charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi charvi</p>
-    <h4>Book a slot</h4>
-    <p>charvi charvi charvi charvi charvi charvi charvi charvi 4vi charvi charvi charvi</p>
+    <h2>Looking for quality pet sitters?</h2>
+    <h4>Search for a Sitter</h4>
+    <p>Contact vetted, quality pet sitters that meets your pet needs.</p>
+    <h4>Book Yourself a Slot</h4>
+    <p>Book through our platform once you have found the right sitter.</p>
+    <h4>Enjoy peace of Mind</h4>
+    <p>Recieve regular photo updates of your pet while youre away.</p>
 </section>
 
  <footer id="footer">
