--- a/pets.html
+++ b/pets.html
@@ -38,8 +38,10 @@
 
 <section class="abstract">
     <h2>charvi charvi charvi charvi charvi</h2>
+    <div class="para1">
     <p>Pets truly are great companions. They help manage loneliness and depression as well as increasing fitness. Owning a pet doesnt have to be a burden when you wish to have vacations. Thanks to the awesome pet care companies that manage
     the welfare of pets while owners are away. PET-CRECHE is a pet daycare and boarding franchise headquartered in India, Delhi. Our firm ensures that the pets will be cared for to the high standards the client expects. PET-CRECHE believs in safe socialization, exercise and education for your furry child.</p>
+    </div>
 </section>
 
 
@@ -100,12 +102,12 @@
 
 <section class="sitters">
     <h2>Looking for quality pet sitters?</h2>
-    <h4>Search for a Sitter</h4>
-    <p>Contact vetted, quality pet sitters that meets your pet needs.</p>
-    <h4>Book Yourself a Slot</h4>
-    <p>Book through our platform once you have found the right sitter.</p>
-    <h4>Enjoy peace of Mind</h4>
-    <p>Recieve regular photo updates of your pet while youre away.</p>
+        <h4>Search for a Sitter</h4>
+        <p>Contact vetted, quality pet sitters that meets your pet needs.</p>
+        <h4>Book Yourself a Slot</h4>
+        <p>Book through our platform once you have found the right sitter.</p>
+        <h4>Enjoy peace of Mind</h4>
+        <p>Recieve regular photo updates of your pet while youre away.</p>
 </section>
 
  <footer id="footer">
