--- a/account.html
+++ b/account.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html>
-<head>
-<title></title>
-  <meta charset="utf-8">
-    <link href="pets.css" rel="stylesheet">
-    <link href="jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet">
-    <link href="jquery-ui-1.12.1/jquery-ui.structure.css" rel="stylesheet">
-    <link href="jquery-ui-1.12.1/jquery-ui.theme.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <script src="https://kit.fontawesome.com/d5b015bfd1.js" crossorigin="anonymous"></script>
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <link href="pets.css" rel="stylesheet">
+  <link href="jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet">
+  <link href="jquery-ui-1.12.1/jquery-ui.structure.css" rel="stylesheet">
+  <link href="jquery-ui-1.12.1/jquery-ui.theme.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+
+  <script src="https://kit.fontawesome.com/d5b015bfd1.js" crossorigin="anonymous"></script>
 </head>
+
 <body class="acc-bg">
   <div class="container">
     <div class="row">
@@ -24,24 +27,24 @@
               <div class="modal-body">
                 <form id="theForm" action="shop.html" method="post" onsubmit="return validateTextbox();">
                   <div class="row">
-                   <label for="name">Name:</label>
+                    <label for="name">Name:</label>
                     <input type="text" id="name" name=""></br></br>
                   </div>
                   <div class="row">
-                   <label for="address">Address:</label>
+                    <label for="address">Address:</label>
                     <input type="text" id="address" name=""></br></br>
                   </div>
                   <div class="row">
-                   <label for="phone">Phone:</label>
+                    <label for="phone">Phone:</label>
                     <input type="tel" id="phone" name=""></br></br>
                   </div>
                   <div class="row">
-                   <label for="email">Email:</label>
+                    <label for="email">Email:</label>
                     <input type="email" id="email" name="">
                   </div>
                   <input type="Submit" value="Submit">
-                  </form>
-                    
+                </form>
+
               </div>
               <div class="modal-footer">
                 <input class="btn btn-secondary" data-dismiss="modal" value="Close">
@@ -54,21 +57,26 @@
     </div>
   </div>
 
- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
- <script src="pets.js"></script>
- 
- <!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    setTimeout(function() {
-      $("#myModal").modal('show');
-    setTimeout(function() {
-      $("#myModal").modal('hide');
-       }, 3000);
-    }, 2000);
-  });
-</script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+  <script src="pets.js"></script>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      setTimeout(function () {
+        $("#myModal").modal('show');
+        setTimeout(function () {
+          $("#myModal").modal('hide');
+        }, 3000);
+      }, 2000);
+    });
+  </script>
 </body>
+
 </html>
