--- a/pets.html
+++ b/pets.html
@@ -23,14 +23,11 @@
       	<div class="collapse navbar-collapse" id="navbarSupportedContent">
     		<ul class="navbar-nav ml-auto">
         		<li class="nav-item">
-            		<a class="nav-link" href="">Account</a>
+            		<a class="nav-link" href="">Sign in</a>
         		</li>
         		<li class="nav-item">
-            		<a class="nav-link" href="">Store</a>
+            		<a class="nav-link" href="">Login</a>
         		</li>
-        		<li class="nav-item">
-            		<a class="nav-link" href="">Adopt</a>
-       			</li>
     		</ul>
  			</div>
 		</nav>
