--- a/account.html
+++ b/account.html
@@ -1,89 +1,80 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
-  <title></title>
-  <meta charset="utf-8">
-  <link href="pets.css" rel="stylesheet">
-  <link href="jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet">
-  <link href="jquery-ui-1.12.1/jquery-ui.structure.css" rel="stylesheet">
-  <link href="jquery-ui-1.12.1/jquery-ui.theme.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<title></title>
+	<meta charset="utf-8">
+	<base href="/">
 
-  <script src="https://kit.fontawesome.com/d5b015bfd1.js" crossorigin="anonymous"></script>
+	<link href="jquery-ui-1.12.1/jquery-ui.css" rel="stylesheet">
+	<link href="jquery-ui-1.12.1/jquery-ui.structure.css" rel="stylesheet">
+	<link href="jquery-ui-1.12.1/jquery-ui.theme.css" rel="stylesheet">
+	<!-- <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+		integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+	<link href="pets.css" rel="stylesheet">
+
+	<script src="https://kit.fontawesome.com/d5b015bfd1.js" crossorigin="anonymous"></script>
 </head>
 
-<body class="acc-bg">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="modal fade" id="myModal">
-          <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1>Title</h1>
-              </div>
-              <div class="modal-body">
-                <form id="theForm" action="shop.html" method="post" onsubmit="return validateTextbox();">
-                  <div class="row">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name=""></br></br>
-                  </div>
-                  <div class="row">
-                    <label for="address">Address:</label>
-                    <input type="text" id="address" name=""></br></br>
-                  </div>
-                  <div class="row">
-                    <label for="phone">Phone:</label>
-                    <input type="tel" id="phone" name=""></br></br>
-                  </div>
-                  <div class="row">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="">
-                  </div>
-                  <input type="Submit" value="Submit">
-                </form>
+<body>
+  	<!-- NAVBAR -->
+  <section id="header-section">
+		<div class="container-fluid">
+			<nav class="navbar navbar-expand-lg navbar-light">
+				<a class="navbar-brand" href="#">PET-CRECHE</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+					aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+							<a class="nav-link" href="#" data-form-type="loginForm">Logout <i class="fas fa-sign-in-alt icon"></i></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+	</section>
+  pick a date: <input type="text" id="pickdate">
+  	<!-- FOOTER -->
+	<footer id="footer">
+		<i class="social-icon fab fa-facebook-f"></i>
+		<i class="social-icon fab fa-twitter"></i>
+		<i class="social-icon fab fa-instagram"></i>
+		<i class="social-icon far fa-envelope"></i>
 
-              </div>
-              <div class="modal-footer">
-                <input class="btn btn-secondary" data-dismiss="modal" value="Close">
-              </div>
-            </div>
-          </div>
-        </div>
-        <a href="#" data-toggle="modal" data-target="#myModal">Open Modal</a>
-      </div>
-    </div>
-  </div>
-  <img src="pets2.jpeg" class="image">
-  <button class="btn image" id="btnPopover"
-    title="Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi Popover title charvi"
-    data-content="bwvuidghwiutrjhabsdhfqygeiuq2euiywbdv" data-toggle="popover"><img src="pets2.jpeg"
-      class="image"></button>
+		<p>© Copyright 2021 PET-CRECHE</p>
+  </footer>
+	<!-- SCRIPTS -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+		integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+	<script src="pets.js"></script>
 
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-  <script src="pets.js"></script>
+	<!-- JavaScript Bundle with Popper -->
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+		integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+		crossorigin="anonymous"></script>
 
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-  <script type="text/javascript">
-    $(document).ready(function () {
-      setTimeout(function () {
-        $("#myModal").modal('show');
-        setTimeout(function () {
-          $("#myModal").modal('hide');
-        }, 3000);
-      }, 2000);
+    <script type="text/javascript">
+      $(document).ready(function (){
+        $('#pickdate').datepicker(
+          {
+            numberOfMonths: 2,
+            changeMonth: true,
+            showWeek: true,
+            weekHeader: "week",
+            minDate: new Date(2021, 08, 16),
+            maxDate: new Date(2021, 12, 25)
+          });
+      });
 
-      $('#btnPopover').popover();
-    });
-  </script>
+    </script>
 </body>
 
 </html>
